<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".note_editor"
    android:background="#E3D2E7">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:id="@+id/back_button"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_editor_header"
            android:id="@+id/header"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/serif_font"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <EditText
        android:layout_below="@id/linearLayout"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:inputType="textMultiLine"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:id="@+id/editText"
        android:gravity="top"
        android:hint="@string/edit_text_hint"
        android:background="@drawable/note_editor_layout"
        android:fontFamily="@font/changa_font"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_below="@id/editText"
        android:id="@+id/add_list_button"
        android:background="@drawable/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/add_list_button"
        android:textColor="#CBCBCB"
        android:textSize="23sp"
        android:textStyle="bold" />
</RelativeLayout>